# LLMOps-Research-Assistant

./: .commitmsg  .cursorrules  .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  Justfile  README.md  README.resume.md  RESULTS.md  docker-compose.observability.yml  docker-compose.yml  mlflow.db  pyproject.toml  pytest.ini  requirements.txt  resume_talking_points.md
.github/workflows/: ci.yml  deploy.yml
agents/: __init__.py  attribution.py  langchain_prompts.py  orchestrator.py  protocols.py  reranker.py  retriever.py  synthesizer.py
analysis/: embedding_analysis.py  repro_benchmark.py
api/: batch.py  main.py  realtime.py  shard_aggregator.py  shard_server.py  websocket_streaming.py
benchmarks/: fill_readme_benchmarks.py  run_benchmarks.py  run_ragas.py  vllm_benchmarks.py
blog_posts/: why_i_chose_faiss_over_managed_vector_db.md
case_studies/: README.md
causal/: __init__.py  causal_inference.py
causal_inference/: __init__.py  counterfactual.py  retrieval_effect.py  uplift.py
cicd/: integrity_gate.py  ragas_gate.py
compile/: __init__.py  torch_compile.py
conf/: config.yaml
config/: hydra_config.py
context_engineering/: __init__.py  chain_of_thought.py  compressor.py  context_manager.py  few_shot.py  mandatory_attribution.py  symbol_map.py  traceable_rag.py  window_manager.py
cost_dashboard/: README.md  __init__.py  tracker.py
csrc/: kernels_wrapper.py  llmops_kernels.cu  setup.py
cuda_ext/: __init__.py  cuda_kernels.py
dataset_engineering/: __init__.py  feature_store.py  quality.py  synthetic.py  versioning.py
docs/: live_demo_checklist.md  operability_evidence.md
eval/: gradio_eval_ui.py  research_ui.py
experimentation/: __init__.py  ab_router.py  cuped.py  double_ml.py  guardrails.py  power_analysis.py  reporting.py  sequential_testing.py
experiments/: ab_framework.py  ab_router.py
fine_tuning/: lora_finetune.py
finetune/: accelerate_finetune.py  lora_finetune.py  peft_lora_finetune.py  quantization_suite.py  ray_fault_tolerant.py  ray_finetune.py  rlhf_ppo.py
governance/: __init__.py  api_router.py  audit_log.py  bias_checks.py  ci_enforcement.py  constitution.py  economic_judge.py  integrity_agent.py  model_card_generator.py  pii_redaction.py
inference/: conditioned_diffusion.py  diffusion_pipeline.py  llamacpp_backend.py  moe_serving.py  tensorrt_llm_config.py  tensorrt_onnx_triton.py  torch_compile_bench.py  trtllm_nim.py  vllm_backend.py
infra/: aggregator.py  aws_observability.py  azure_deploy.py  cloudwatch_logging.py  distributed_faiss_service.py  distributed_index.py  docker-compose.yml  sagemaker_deploy.py  sagemaker_model_registry.py  sagemaker_pipeline.py  shard_server.py  sm_processing.py
ingestion/: __init__.py  batch_processor.py  data_quality.py  hf_dataset_pipeline.py  large_scale_ingest.py  pipeline.py  spark_ml_pipeline.py  spark_pipeline.py  warc_pipeline.py
interpretability/: __init__.py  probes.py
interview_prep/: README.md  collaboration_evidence.md  linkedin_profile_copy.md  oss_contribution_plan.md
k8s/: core.yaml  shards.yaml
mcp_server/: server.py
microservices/: __init__.py  docker-compose.microservices.yml  microservices.py
mlops/: __init__.py  compat.py  evaluate.py  evaluation.py  grounding_trace.py  ragas_tracker.py  tracking.py
monitoring/: __init__.py  alerts.yml  prometheus.yml  prometheus_monitoring.py
multimodal/: __init__.py  multimodal_pipeline.py
observability/: alertmanager.yml  alerts.yml  grafana_dashboard.json  metrics.py  prometheus.yml
prompt_registry/: README.md  __init__.py  registry.py
recsys/: __init__.py  recommendation_engine.py
rl/: __init__.py  reasoning_rl.py  rl_environments.py  rlhf_pipeline.py
safety/: __init__.py  adversarial_classifier.py  adversarial_tests.py  behavioral_classifier.py  behavioral_classifiers.py  constitutional_filter.py  governance.py  semantic_safety.py
sandbox/: __init__.py  code_sandbox.py  debug_loop.py  self_healing_loop.py  strict_execution_orchestrator.py  tdd_debug_loop.py  validation_loop.py
spark_ml/: __init__.py  databricks_notebook.py  delta_pipeline.py  feature_store.py  model_registry_flow.py  spark_ml_pipeline.py
streaming/: __init__.py  realtime_features.py  streaming_pipeline.py
tests/: test_ab_framework.py  test_agents.py  test_api.py  test_attribution.py  test_behavioral_classifier.py  test_celery.py  test_consensus_node.py  test_consensus_orchestrator.py  test_constitution.py  test_constitutional_filter.py  test_cross_provider_consensus.py  test_debug_loop.py  test_distributed_faiss.py  test_economic_judge.py  test_evaluation.py  test_ingestion.py  test_integrity_agent.py  test_mandatory_attribution.py  test_mlops.py  test_multi_agent.py  test_orchestrator.py  test_orchestrator_integration.py  test_pipeline.py  test_policy_enforcement_agent.py  test_prompt_registry_verifier.py  test_reranker.py  test_research_log.py  test_safety.py  test_self_healing_loop.py  test_shard_aggregator_failure_modes.py  test_strict_execution_orchestrator.py  test_symbol_map.py  test_tdd_debug_loop.py  test_traceable_rag.py  test_validation_loop.py  test_verifier_integrity.py
tokenization/: __init__.py  tokenization_suite.py
(+75 files in other folders)
